--- a/style.css
+++ b/style.css
@@ -239,6 +239,9 @@ border-radius: 50%;
         padding: 5px 10px;
         font-size: 10px;
     }
+    .weekdays div{
+        padding: 8px 15px;
+    }
 }
 @media screen and (max-width:665px) {
     .modal-dialog{
@@ -257,6 +260,9 @@ border-radius: 50%;
     .profile-name, .hidden-arrow{
         font-size: 15px;
 
+    }
+    .weekdays div{
+        padding: 8px 13px;
     }
 }
 @media screen and (max-width:530px) {
@@ -319,6 +325,9 @@ border-radius: 50%;
         font-size: 8px;
         
     }
+    .weekdays div{
+        padding: 5px 10px;
+    }
 }
 @media screen and (max-width:365px){
     input[type=checkbox]{
@@ -349,6 +358,7 @@ border-radius: 50%;
     }
 }
 @media screen and (max-width:250px){
+   
     .schedulebtn{
         font-size: 8px;
         padding: 5px 10px;
